--- a/example/MAX7219.ioc
+++ b/example/MAX7219.ioc
@@ -5,14 +5,17 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
-Mcu.IPNb=3
+Mcu.IP3=SYS
+Mcu.IPNb=4
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PA4
-Mcu.Pin2=PA5
-Mcu.Pin3=PA7
-Mcu.PinsNb=4
+Mcu.Pin0=PA4
+Mcu.Pin1=PA5
+Mcu.Pin2=PA7
+Mcu.Pin3=PA13
+Mcu.Pin4=PA14
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.PinsNb=6
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
 MxCube.Version=4.19.0
@@ -27,14 +30,16 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103R(8-B)Tx
@@ -81,4 +86,6 @@ SPI1.CalculateBaudRate=1000.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.IPParameters=Mode,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=MAX7219
